<resources>
    <string name="app_name">Museum Admissions Calculator</string>
    <string name="museum_select">Welcome, please select a museum below to continue.</string>
    <string name="museum1">Museum of Modern Art</string>
    <string name="museum2">American Museum of Natural History</string>
    <string name="museum3">Metropolitan Museum of Art</string>
    <string name="museum4">Museum of the City of New York</string>
    <string name="goToText">Go to Museum Admissions</string>
    <string name="maxTicketNotice">Maximum of 5 tickets for each!</string>
    <string name="totalTicketText">Total from tickets:</string>
    <string name="salesTax">Sales tax:</string>
    <string name="totalAfterTax">Total (including tax):</string>
    <string name="museumImage">Museum Image</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="zeroIntMoney">$0</string>
    <string name="zerDoubleMoney">$0.00</string>
    <string name="museum1StudentTicket">Student ($14.00 each):</string>
    <string name="museum1AdultTicket">Adult ($25.00 each):</string>
    <string name="museum1SeniorTicket">Senior ($18.00 each):</string>
    <string name="museum2StudentTicket">Student ($18.00 each):</string>
    <string name="museum2AdultTicket">Adult ($23.00 each):</string>
    <string name="museum2SeniorTicket">Senior ($18.00 each):</string>
    <string name="museum3StudentTicket">Student ($12.00 each):</string>
    <string name="museum3AdultTicket">Adult ($25.00 each):</string>
    <string name="museum3SeniorTicket">Senior ($17.00 each):</string>
    <string name="museum4StudentTicket">Student ($14.00 each):</string>
    <string name="museum4AdultTicket">Adult ($20.00 each):</string>
    <string name="museum4SeniorTicket">Senior ($14.00 each)</string>


</resources>