<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuseumAdmissions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/museumImageView"
            android:layout_width="wrap_content"
            android:layout_height="109dp"
            android:contentDescription="@string/museumImage"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/studentTicketsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/decreaseStudentTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/decrease" />

            <TextView
                android:id="@+id/studentTicketCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/increaseStudentTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/increase" />

            <TextView
                android:id="@+id/studentTicketPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adultTicketsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/decreaseAdultTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/decrease" />

            <TextView
                android:id="@+id/adultTicketCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/increaseAdultTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/increase" />

            <TextView
                android:id="@+id/adultTicketPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seniorTicketsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/decreaseSeniorTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/decrease" />

            <TextView
                android:id="@+id/seniorTicketCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/increaseSeniorTicketCount"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onChange"
                android:text="@string/increase" />

            <TextView
                android:id="@+id/seniorTicketPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalTicketPriceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalTicketText" />

                <TextView
                    android:id="@+id/salesTaxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salesTax" />

                <TextView
                    android:id="@+id/totalAfterTaxText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalAfterTax" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalTicketPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/salesTax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/totalAfterTax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>